Bug #21896
Bucket policy evaluation is not carried out for DeleteBucketWebsite
% Done:
90%
Source:
Q/A
Tags:
Backport:
luminous
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):
Related issues
History
#1 Updated by Adam Emerson over 5 years ago
#2 Updated by Adam Emerson over 5 years ago
Better fix in: https://github.com/ceph/ceph/pull/18606
#3 Updated by Matt Benjamin about 5 years ago
- Status changed from Fix Under Review to Pending Backport
#4 Updated by Nathan Cutler about 5 years ago
- Backport changed from Luminous to luminous
#5 Updated by Nathan Cutler about 5 years ago
- Copied to Backport #22214: luminous: Bucket policy evaluation is not carried out for DeleteBucketWebsite added
#6 Updated by Adam Emerson almost 5 years ago
- Status changed from Pending Backport to Resolved