rgw: Check the bucket policy in DeleteBucketWebsite

Fixes: http://tracker.ceph.com/issues/21896

Signed-off-by: Adam C. Emerson <aemerson@redhat.com>